--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,6 +12,13 @@ img {
   margin-bottom: 1rem;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .navbar {
   margin-bottom: 2rem;
   border-bottom: 0.125rem solid hsl(0, 0%, 30%);
