--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer class="footer mt-auto py-3">
   <div class="container footer-container">{% include svg_icons.html %}</div>
+  <script type="text/javascript" src="/_js/lightbox.js"></script>
+  <link rel="stylesheet" href="/_css/lightbox.css">
 </footer>
