--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="/_js/lightbox.js"></script>
-    <link rel="stylesheet" href="/_css/lightbox.css">
+    <script type="text/javascript" src="/js/lightbox.js"></script>
+    <link rel="stylesheet" href="/css/lightbox.css">
   </body>
 </html>
