--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,5 +42,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    {% include lazyload.html %}
   </body>
 </html>
